# monoid-representations

./: README.md  pyproject.toml
src/monoid_representations/: boolean.py  fourier.py  permutations.py
src/monoid_representations/groups/: dihedral.py  sn_irreps.py  tableau.py
